--- a/url-shortening-api/src/App.css
+++ b/url-shortening-api/src/App.css
@@ -1,8 +1,12 @@
 #root {
   max-width: 1440px;
   margin: 0 auto;
-  width: 90%;
 }
+
+main{
+  margin: 0 auto;
+}
+
 
 .showMenu {
   display: block;
