--- a/url-shortening-api/src/components/Banner.css
+++ b/url-shortening-api/src/components/Banner.css
@@ -1,4 +1,6 @@
 .banner-container {
+  width: 90%;
+  margin: 0 auto;
   .banner {
     img {
       width: 100%;
@@ -20,6 +22,18 @@
 
     button {
       font-size: 18px;
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+@media (width> 768px) {
+  .banner-container {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    .banner-text {
+      text-align: left;
     }
   }
 }
