--- a/url-shortening-api/src/components/LinkSection.css
+++ b/url-shortening-api/src/components/LinkSection.css
@@ -1,18 +1,47 @@
-.link-form {
-  margin: 3rem 0;
+.form-section {
+  background-color: #f4f4f4;
+  padding: 3rem;
+  margin-top: 6rem;
   display: flex;
-  flex-direction: column;
-  padding: 20px;
-  background-color: var(--color2);
-  background-image: url("../assets/images/bg-shorten-mobile.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 5px;
+  justify-content: center;
+  position: relative;
 
-  input {
-    border-radius: 5px;
-    border: none;
-    padding: 10px;
-    margin-bottom: 20px;
+  .link-form {
+    position: absolute;
+    top: -65px;
+    width: 90%;
+    margin-top: 3rem 0;
+
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    background-color: var(--color2);
+    background-image: url("../assets/images/bg-shorten-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+
+    input {
+      border-radius: 5px;
+      border: none;
+      padding: 10px;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+@media (width> 768px) {
+  .form-section {
+    .link-form {
+      flex-direction: row;
+      top:-3rem;
+      align-items: center;
+      gap: 2rem;
+      padding: 2rem 3rem;
+      input {
+        margin-bottom: 0;
+        flex-grow: 1;
+      }
+    }
   }
 }
