--- a/url-shortening-api/src/components/LinkSection.css
+++ b/url-shortening-api/src/components/LinkSection.css
@@ -1,6 +1,7 @@
 .form-section {
+  width: 100%;
   background-color: #f4f4f4;
-  padding: 3rem;
+  padding-top: 3rem;
   margin-top: 6rem;
   display: flex;
   justify-content: center;
@@ -28,19 +29,75 @@
       margin-bottom: 20px;
     }
   }
+
+  .link-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 3rem auto;
+    border-radius: 10px;
+
+    .link-item {
+      width: 90%;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      background-color: white;
+      p {
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      hr {
+        margin: 0;
+      }
+      .link-original {
+        padding: 1rem;
+      }
+      .link-shortened {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        padding: 1rem;
+        a {
+          color: var(--color1);
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
 
 @media (width> 768px) {
   .form-section {
     .link-form {
       flex-direction: row;
-      top:-3rem;
+      top: -3rem;
       align-items: center;
       gap: 2rem;
       padding: 2rem 3rem;
       input {
         margin-bottom: 0;
         flex-grow: 1;
+      }
+    }
+
+    .link-list {
+      width: 100%;
+      .link-item {
+
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        hr {
+          display: none;
+        }
+        .link-original {
+          padding: 1rem 2rem;
+        }
+        .link-shortened {
+          flex-direction: row;
+        }
       }
     }
   }
