--- a/url-shortening-api/src/components/SiteMap.css
+++ b/url-shortening-api/src/components/SiteMap.css
@@ -1,20 +1,23 @@
 .site-map {
   background-color: var(--color6);
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   color: white;
   text-align: center;
   padding: 2rem;
 
-  .social-media {
-    display: flex;
-    justify-content: center;
-    gap: 1.5rem;
+  .site-map-logo {
+    width: 100%;
   }
 
   .links {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
     ul {
-      margin: 2rem 0;
+      width: 100%;
+      margin: 0.5rem 0;
       h4 {
         margin-bottom: 1rem;
       }
@@ -25,31 +28,53 @@
       }
     }
   }
+
+  .social-media {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 1.5rem;
+
+    img {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+  }
 }
 
 @media (width> 768px) {
   .site-map {
-    padding: 3rem 6rem;
-    flex-direction: row;
-    gap: 4rem;
-    align-items: start;
-    justify-content: space-between;
-    width: 100%;
+    flex-wrap: nowrap;
+    text-align: left;
+    padding: 2rem 4rem;
+
+    .site-map-logo {
+      width: max-content;
+    }
 
     .links {
-      text-align: left;
+      flex-wrap: nowrap;
+      gap: 3rem;
       flex-grow: 1;
-      display: flex;
       justify-content: flex-end;
-      align-items: flex-start;
-      gap: 6rem;
 
       ul {
-        margin: 0;
+        width: max-content;
+        margin: 0.5rem 0;
+        padding-right: 4rem;
+        h4 {
+          margin-bottom: 1rem;
+        }
         p {
-          margin-bottom: 0.5rem;
+          margin-bottom: 1rem;
+          font-size: smaller;
+          color: var(--color3);
         }
       }
+    }
+
+    .social-media {
+      width: max-content;
     }
   }
 }
